// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments-1.js format 1`] = `
====================================options=====================================
cursorOffset: 7
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// hi l<|>ol
function ehllooo () {
  const hi = "hi"
}

=====================================output=====================================
// hi l<|>ol
function ehllooo() {
  const hi = "hi";
}

================================================================================
`;

exports[`comments-2.js format 1`] = `
====================================options=====================================
cursorOffset: 0
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<|>
// howdy
// hi lol
const y = 5

=====================================output=====================================
<|>// howdy
// hi lol
const y = 5;

================================================================================
`;

exports[`comments-3.js format 1`] = `
====================================options=====================================
cursorOffset: 1
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/<|>/ howdy
// hi lol
const y = 5

=====================================output=====================================
/<|>/ howdy
// hi lol
const y = 5;

================================================================================
`;

exports[`comments-4.js format 1`] = `
====================================options=====================================
cursorOffset: 44
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// howdy
// hi lol
const y = 5
//  traling! <|>

=====================================output=====================================
// howdy
// hi lol
const y = 5;
//  traling!<|>

================================================================================
`;

exports[`cursor-0.js format 1`] = `
====================================options=====================================
cursorOffset: 27
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function() {return        <|> 15})()

=====================================output=====================================
(function () {
  return <|>15;
})();

================================================================================
`;

exports[`cursor-1.js format 1`] = `
====================================options=====================================
cursorOffset: 26
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function(){return        <|>15})()

=====================================output=====================================
(function () {
  return <|>15;
})();

================================================================================
`;

exports[`cursor-2.js format 1`] = `
====================================options=====================================
cursorOffset: 6
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================

foo  <|>  (bar);

=====================================output=====================================
foo<|>(bar);

================================================================================
`;

exports[`cursor-3.js format 1`] = `
====================================options=====================================
cursorOffset: 4
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================


  <|>

  const y = 5

=====================================output=====================================
<|>const y = 5;

================================================================================
`;

exports[`cursor-4.js format 1`] = `
====================================options=====================================
cursorOffset: 19
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================


  const y = 5

  <|>

  const z = 9

=====================================output=====================================
const y = 5;

<|>const z = 9;

================================================================================
`;

exports[`cursor-5.js format 1`] = `
====================================options=====================================
cursorOffset: 13
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const    /* h<|>i */    y = 5

=====================================output=====================================
const /* h<|>i */ y = 5;

================================================================================
`;

exports[`cursor-6.js format 1`] = `
====================================options=====================================
cursorOffset: 20
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const      y    /* h<|>i */   = 5

=====================================output=====================================
const y /* h<|>i */ = 5;

================================================================================
`;

exports[`cursor-7.js format 1`] = `
====================================options=====================================
cursorOffset: 12
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const y = 5
<|>

const z = 9

=====================================output=====================================
const y = 5;
<|>
const z = 9;

================================================================================
`;

exports[`cursor-8.js format 1`] = `
====================================options=====================================
cursorOffset: 6
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
  func<|>tion banana(){}
=====================================output=====================================
func<|>tion banana() {}

================================================================================
`;

exports[`cursor-9.js format 1`] = `
====================================options=====================================
cursorOffset: 26
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
     thisWillBeFormatted  <|>  (2  ,3,   )
=====================================output=====================================
thisWillBeFormatted<|>(2, 3);

================================================================================
`;

exports[`cursor-10.js format 1`] = `
====================================options=====================================
cursorOffset: 16
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const y = 5




<|>
  
=====================================output=====================================
const y = 5;
<|>
================================================================================
`;

exports[`cursor-11.js format 1`] = `
====================================options=====================================
cursorOffset: 57
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
    [
      [
        1,
        2,
               <|> 3, "looooooooooooooooooooooooooooooooooooooooooooooooooong",
        "looooooooooooooooooooooooooooooooooooooooooooooooooong",
      ]
    ]
  ]
]

=====================================output=====================================
[
  [
    [
      [
        1,
        2,
        <|>3,
        "looooooooooooooooooooooooooooooooooooooooooooooooooong",
        "looooooooooooooooooooooooooooooooooooooooooooooooooong",
      ],
    ],
  ],
];

================================================================================
`;

exports[`cursor-12.js format 1`] = `
====================================options=====================================
cursorOffset: 330
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// At the time of adding this test, the cursor positioning we end up with
// here seems clearly wrong.
// I'm adding the test case anyway to demonstrate the brokenness and ensure
// that if a future changes fixes it, it'll be obvious from the PR diff that
// the fix happened.
[
  [
    [
      [
        1,
        2,
        3  <|>      ,"looooooooooooooooooooooooooooooooooooooooooooooooooong",
        "looooooooooooooooooooooooooooooooooooooooooooooooooong",
      ]
    ]
  ]
]

=====================================output=====================================
// At the time of adding this test, the cursor positioning we end up with
// here seems clearly wrong.
// I'm adding the test case anyway to demonstrate the brokenness and ensure
// that if a future changes fixes it, it'll be obvious from the PR diff that
// the fix happened.
[
  [
    [
      [
        1,
        2,
        3,
  <|>      "looooooooooooooooooooooooooooooooooooooooooooooooooong",
        "looooooooooooooooooooooooooooooooooooooooooooooooooong",
      ],
    ],
  ],
];

================================================================================
`;

exports[`cursor-13.js format 1`] = `
====================================options=====================================
cursorOffset: 84
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
      import lib from './lib.js';
  
        function myFunction() { return 'foo'; }<|>

=====================================output=====================================
import lib from "./lib.js";

function myFunction() {
  return "foo";
}<|>

================================================================================
`;

exports[`cursor-emoji.js format 1`] = `
====================================options=====================================
cursorOffset: 9
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
"😀😀😀😀<|>"

=====================================output=====================================
"😀😀😀😀<|>";

================================================================================
`;

exports[`file-start-with-comment-1.js format 1`] = `
====================================options=====================================
cursorOffset: 5
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// hi<|> lol
haha()

=====================================output=====================================
// hi<|> lol
haha();

================================================================================
`;

exports[`file-start-with-comment-2.js format 1`] = `
====================================options=====================================
cursorOffset: 16
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// hi lol
haha()<|>

=====================================output=====================================
// hi lol
haha()<|>;

================================================================================
`;

exports[`file-start-with-comment-3.js format 1`] = `
====================================options=====================================
cursorOffset: 127
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// All messages are represented in JSON.
// So, the prettier.py controls a subprocess which spawns "node {this_file}".
import {<|>  } from "fs"

=====================================output=====================================
// All messages are represented in JSON.
// So, the prettier.py controls a subprocess which spawns "node {this_file}".
import {<|>} from "fs";

================================================================================
`;

exports[`range-0.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 56
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 72
    : rangeStart: 31
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted  ( 1  ,3)
  2 |
> 3 |     thisWillBeFormatted  <|>  (2  ,3,   )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 90  ,)
    | ^
  6 |     
    : =====================================output=====================================
    : thisWontBeFormatted  ( 1  ,3)
    :
    :     thisWillBeFormatted<|>(2, 3);
    :
    :     thisWontBeFormatted  (2, 90  ,)
    :     
    : ================================================================================
`;

exports[`range-1.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 64
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 72
    : rangeStart: 31
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted  ( 1  ,3)
  2 |
> 3 |     thisWillBeFormatted    (2  ,3<|>,   )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 90  ,)
    | ^
  6 |     
    : =====================================output=====================================
    : thisWontBeFormatted  ( 1  ,3)
    :
    :     thisWillBeFormatted(2, 3<|>);
    :
    :     thisWontBeFormatted  (2, 90  ,)
    :     
    : ================================================================================
`;

exports[`range-2.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 67
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 72
    : rangeStart: 31
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted  ( 1  ,3)
  2 |
> 3 |     thisWillBeFormatted    (2  ,3,  <|> )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 90  ,)
    | ^
  6 |     
    : =====================================output=====================================
    : thisWontBeFormatted  ( 1  ,3)
    :
    :     thisWillBeFormatted(2, 3<|>);
    :
    :     thisWontBeFormatted  (2, 90  ,)
    :     
    : ================================================================================
`;

exports[`range-3.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 20
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 72
    : rangeStart: 30
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted <|> ( 1  ,3)
> 2 |
    | ^
> 3 |     thisWillBeFormatted    (2  ,3,   )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 90  ,)
    | ^
  6 |     
    : =====================================output=====================================
    : thisWontBeFormatted <|> ( 1  ,3)
    :
    :     thisWillBeFormatted(2, 3);
    :
    :     thisWontBeFormatted  (2, 90  ,)
    :     
    : ================================================================================
`;

exports[`range-4.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 101
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 75
    : rangeStart: 31
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted  ( 1  ,3)
  2 |
> 3 |     thisWillBeFormatted    (2  ,3,   )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 9<|>0  ,)
    | ^^^^
  6 |     
    : =====================================output=====================================
    : thisWontBeFormatted  ( 1  ,3)
    :
    :     thisWillBeFormatted(2, 3);
    :
    :     thisWontBeFormatted  (2, 9<|>0  ,)
    :     
    : ================================================================================
`;

exports[`range-5.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 23
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 23
    : rangeStart: 14
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | const myVar = aFunction<|>
    |               ^^^^^^^^^
  2 |
    : =====================================output=====================================
    : const myVar = aFunction<|>;
    :
    : ================================================================================
`;

exports[`range-6.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 24
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 24
    : rangeStart: 14
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | const myVar = aFunction;<|>
    |               ^^^^^^^^^^
  2 |
    : =====================================output=====================================
    : const myVar = aFunction;<|>
    :
    : ================================================================================
`;

exports[`range-7.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 23
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 24
    : rangeStart: 14
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | const myVar = aFunction<|>;
    |               ^^^^^^^^^^^^^
  2 |
    : =====================================output=====================================
    : const myVar = aFunction<|>;
    :
    : ================================================================================
`;

exports[`range-8.js format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 69
    : parsers: ["babel", "typescript", "flow"]
    : rangeEnd: 72
    : rangeStart: 30
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | thisWontBeFormatted  ( 1  ,3)
> 2 |
    | ^
> 3 |     thisWillBeFormatted    (2  ,3,   )<|>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |
    | ^
> 5 |     thisWontBeFormatted  (2, 90  ,)
    | ^
  6 |
    : =====================================output=====================================
    : thisWontBeFormatted  ( 1  ,3)
    :
    :     thisWillBeFormatted(2, 3)<|>;
    :
    :     thisWontBeFormatted  (2, 90  ,)
    :
    : ================================================================================
`;
